Day 2 Anime Website

--- a/Anime Website/CSS/index.css
+++ b/Anime Website/CSS/index.css
@@ -74,82 +74,56 @@ body {
 
 .recent {
   display: flex;
-  padding: 35px 40px;
+  padding: 20px;
   color: whitesmoke;
-  z-index: 1;
+  overflow: hidden;
 }
 
 .item {
-  position: relative;
   width: 500px;
-  z-index: 1;
   height: 500px;
+  position: relative;
+  overflow: hidden;
+  transition: flex 0.5s ease;
 }
 
 .item:hover {
-  width: 1000px;
-  transition: all 0.3s linear;
+  flex-grow: 4;
+  height: 500px;
+  width: 900px;
 }
 
 .text {
   position: absolute;
-  bottom: 0;
-  font-size: 23px;
-  font-weight: bold;
-  text-align: center;
-  z-index: 1;
-  padding: 0 20px;
+  bottom: 20px;
+  left: 20px;
+  font-size: 24px;
+  transition: opacity 0.5s ease;
 }
 
-.image1:hover,
-.image2:hover,
-.image3:hover,
-.image4:hover,
-.image5:hover {
-  filter: brightness(25%);
-}
-
-.image1,
-.image2,
-.image3,
-.image4,
-.image5 {
-  background-size: cover;
-  background-position: center;
-  filter: brightness(60%) contrast(90%) saturate(110%);
-  height: 100%;
+.item img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.5s ease;
 }
 
-.image1 {
-  background-image: url(../utils/Solo\ Leveling.png);
-}
-
-.image2 {
-  background-image: url(../utils/Jujutsu\ Kaisen.jpg);
-}
-
-.image3 {
-  background-image: url(../utils/Demon\ Slayer.jpg);
-}
-
-.image4 {
-  background-image: url(../utils/Naruto.jpg);
-}
-
-.image5 {
-  background-image: url(../utils/Death\ Note.jpg);
+.item:hover img {
+  height: 500px;
+  filter: brightness(20%);
 }
 
 .latest {
   display: flex;
-  gap: 27px;
+  width: 100%;
+  gap: 20px;
 }
 
 .anime {
   display: flex;
-  gap: 13px;
-  padding: 10px 39px;
+  gap: 20px;
+  margin: 10px 19px;
+  /* border: 1px solid; */
 }
 
 .latest_img {
@@ -160,8 +134,8 @@ body {
 }
 
 .description > p {
-  padding: 15px 0;
-  font-size: 25px;
+  padding-top: 11px;
+  font-size: 21px;
   font-weight: bold;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
@@ -175,7 +149,6 @@ body {
   font-weight: 700;
   display: flex;
   gap: 15px;
-  opacity: 0.5;
 }
 
 .date {
@@ -185,6 +158,7 @@ body {
   gap: 7px;
   text-align: center;
   font-size: 13px;
+  opacity: 0.5;
 }
 
 .clock {
@@ -199,6 +173,11 @@ body {
   gap: 7px;
   text-align: center;
   font-size: 13px;
+  opacity: 0.5;
+}
+
+.source:hover {
+  text-decoration: underline;
 }
 
 .profile {
@@ -206,8 +185,13 @@ body {
   width: 15px;
 }
 
+.child3 {
+  flex: 3;
+}
+
 .child4 {
   padding: 15px 0;
+  flex: 1;
 }
 
 input {
@@ -238,18 +222,21 @@ hr {
 }
 
 .icons {
+  width: 220px;
   display: flex;
+  gap: 15px;
 }
 
 .icons > img {
-  height: 50px;
-  width: 50px;
-  margin: 30px 10px;
+  height: 40px;
+  width: 40px;
+  margin: 30px 0;
   border-radius: 10px;
+  object-fit: cover;
 }
 
 h5 {
-  margin-top: 40px;
+  margin-top: 10px;
   height: 40px;
   width: 185px;
   text-align: center;
@@ -262,10 +249,12 @@ h5 {
 }
 
 .uploads {
-  margin: 20px 150px;
+  padding: 15px 0;
+  padding-right: 15px;
   color: red;
 }
 
 .uploads > p {
-  padding: 15px 0;
+  font-size: 13px;
+  padding: 10px 0;
 }
