--- a/Anime Website/CSS/index.css
+++ b/Anime Website/CSS/index.css
@@ -122,7 +122,6 @@ body {
 .anime {
   display: flex;
   gap: 20px;
-  margin: 10px 19px;
   /* border: 1px solid; */
 }
 
@@ -136,7 +135,7 @@ body {
 .description > p {
   padding-top: 11px;
   font-size: 21px;
-  font-weight: bold;
+  font-weight: 700;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -187,6 +186,8 @@ body {
 
 .child3 {
   flex: 3;
+  border-bottom: 1.5px solid rgb(208, 206, 206);
+  margin: 10px 25px;
 }
 
 .child4 {
@@ -257,4 +258,61 @@ h5 {
 .uploads > p {
   font-size: 13px;
   padding: 10px 0;
+}
+
+h4 {
+  height: 33px;
+  width: 190px;
+  text-align: center;
+  background-color: rgb(51, 50, 50);
+  color: whitesmoke;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  padding: 10px 0;
+}
+
+.discord {
+  height: auto;
+  width: 310px;
+  margin: 20px 0;
+}
+
+h3 {
+  height: 33px;
+  width: 200px;
+  text-align: center;
+  background-color: rgb(51, 50, 50);
+  color: whitesmoke;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  padding: 10px 0;
+  margin-top: 20px;
+}
+
+.telegram {
+  height: auto;
+  width: 310px;
+  margin: 20px 0;
+}
+
+h2 {
+  margin-top: 40px;
+  height: 40px;
+  width: 150px;
+  text-align: center;
+  background-color: rgb(51, 50, 50);
+  color: whitesmoke;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  padding: 13px 0;
+}
+
+.ads {
+  rotate: 30deg;
+  font-size: small;
+  padding-top: 120px;
+  padding-left: 30px;
 }
