Day 5 Anime Website

--- a/Anime Website/CSS/index.css
+++ b/Anime Website/CSS/index.css
@@ -186,8 +186,9 @@ body {
 
 .child3 {
   flex: 3;
-  border-bottom: 1.5px solid rgb(208, 206, 206);
+  border-bottom: 1px solid rgb(208, 206, 206);
   margin: 10px 25px;
+  padding-bottom: 30px;
 }
 
 .child4 {
@@ -315,4 +316,95 @@ h2 {
   font-size: small;
   padding-top: 120px;
   padding-left: 30px;
+}
+
+.pagination {
+  /* border: 1px solid; */
+  display: flex;
+  align-items: center;
+  margin: 0 250px;
+  padding: 30px 0;
+  gap: 10px;
+}
+
+.btn,
+.btn3 {
+  width: 45px;
+  height: 45px;
+  border-radius: 5px;
+  font-size: medium;
+  text-align: center;
+  font-weight: 500;
+  border: 1px transparent;
+  color: grey;
+}
+
+.btn3:hover {
+  background-color: rgb(208, 206, 206);
+}
+
+.btn2 {
+  width: 45px;
+  height: 45px;
+  border-radius: 5px;
+  font-size: medium;
+  text-align: center;
+  font-weight: 500;
+  border: 1px transparent;
+  background-color: red;
+  color: #fff;
+}
+
+.btn1 {
+  border: 1px transparent;
+  width: 200px;
+  color: #fff;
+  text-align: center;
+  height: 40px;
+  border-radius: 5px;
+  font-size: medium;
+  font-weight: 500;
+  background-color: red;
+  margin-left: 250px;
+}
+
+.btn1:hover {
+  background-color: rgb(169, 3, 3);
+}
+
+.footer {
+  display: flex;
+  background-color: #000;
+  color: #fff;
+  height: 50px;
+  padding: 20px 10px;
+  gap: 880px;
+  align-items: center;
+  border-top: 0.5px solid #c1c1c1;
+}
+
+.text1 {
+  text-transform: capitalize;
+  font-weight: normal;
+  font-size: medium;
+}
+
+.text1 > a {
+  color: #1d21a1;
+}
+
+.footer_img {
+  display: flex;
+  gap: 10px;
+}
+
+.footer_img > img {
+  height: 25px;
+  width: 25px;
+  object-fit: fill;
+  background-color: #fff;
+}
+
+.image {
+  filter: grayscale(10);
 }
