--- a/Anime Website/CSS/index.css
+++ b/Anime Website/CSS/index.css
@@ -36,7 +36,7 @@ body {
   font-size: 15px;
   color: white;
   display: flex;
-  gap: 21px;
+  gap: 25px;
   list-style-type: none;
   justify-content: center;
   align-items: center;
@@ -70,6 +70,8 @@ body {
 .parent {
   background-color: whitesmoke;
   margin: 0 45px;
+  padding: 0 20px;
+  padding-top: 20px;
 }
 
 .recent {
