--- a/Anime Website/CSS/index.css
+++ b/Anime Website/CSS/index.css
@@ -413,6 +413,9 @@ h2 {
 }
 
 @media (max-width: 480px) {
+  .navbar {
+    display: none;
+  }
 }
 
 @media (min-width: 481px) and (max-width: 770px) {
