--- a/Masai Website(Hetuk)/CSS/Home_Page.css
+++ b/Masai Website(Hetuk)/CSS/Home_Page.css
@@ -25,13 +25,14 @@
   /* text-transform: uppercase;*/
   list-style: none;
 }
+
 .navbar_parent {
   border: 1px solid #000;
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-transform: uppercase;
-  padding: 20px;
+  padding: 10px 20px;
   width: 100%;
 }
 
@@ -56,17 +57,6 @@ a:hover {
   object-fit: contain;
 }
 
-.navbar_child1 > #navbar_courses {
-  font-size: 17px;
-  font-weight: bold;
-  width: 110px;
-  height: 40px;
-  border-radius: 5px;
-  padding: 7px;
-  background-color: #d5e3f9;
-  text-transform: uppercase;
-}
-
 .navbar_child2 > ul {
   display: flex;
   list-style-type: none;
@@ -82,10 +72,10 @@ li:hover {
 }
 
 .navbar_register {
-  width: 130px;
-  height: 50px;
+  width: 120px;
+  height: 40px;
   border-radius: 10px;
-  padding: 7px;
+  padding: 7px 17px;
   text-transform: uppercase;
   font-weight: bold;
   border: 5px transparent;
@@ -3151,4 +3141,357 @@ ul li {
     padding: 16px 13px;
     font-size: 16px;
   }
+}
+
+/* From Uiverse.io by JaydipPrajapati1910 */
+button {
+  background: transparent;
+  position: relative;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  font-size: 17px;
+  font-weight: 600;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 10px;
+  overflow: hidden;
+  color: black;
+  transition: color 0.3s 0.1s ease-out;
+  text-align: center;
+  text-transform: uppercase;
+  height: 40px;
+}
+
+button span {
+  margin: 10px;
+}
+
+button::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  content: "";
+  border-radius: 50%;
+  display: block;
+  width: 20em;
+  height: 5em;
+  left: -5em;
+  text-align: center;
+  transition: box-shadow 0.5s ease-out;
+  z-index: -1;
+}
+
+button:hover {
+  color: #fff;
+  border: 1px solid;
+}
+
+button:hover::before {
+  box-shadow: inset 0 0 0 10em rgb(255, 0, 0);
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+.popup {
+  position: fixed;
+  left: 50%;
+  top: -150%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  border-radius: 10px;
+  height: auto;
+  background: #f5f5f5;
+  z-index: 7;
+  /* padding: 50px;*/
+}
+body.popup-active .popup {
+  top: 50%;
+}
+body.popup-active .popup-overlay {
+  display: block;
+}
+.popup .popup-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  background-color: #555;
+  padding: 10px;
+  border-radius: 10px;
+  color: #eee;
+  font-weight: bold;
+}
+
+.parents {
+  display: flex;
+  margin: 50px 0px;
+  justify-content: center;
+}
+.parents_2 {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  margin: 0 40px;
+}
+.parents_1 {
+  width: 25%;
+  height: inherit;
+  border: 3px solid rgb(237, 235, 235);
+  border-bottom: none;
+  border-top: none;
+  padding: 0px 20px;
+  border-left: none;
+}
+.SD {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  width: 200px;
+  height: 40px;
+  font-weight: bolder;
+  border-radius: 5px;
+  color: #f50536;
+}
+.main {
+  display: flex;
+  gap: 30px;
+  border-radius: 10px;
+  padding: 0px 10px;
+  margin: 20px 0px;
+  border: 1px solid #f50536;
+  background-color: #fef2f2;
+}
+.AL:hover,
+.DS:hover,
+.EL:hover,
+.M:hover,
+.MN-1:hover {
+  background-color: rgb(204, 212, 215);
+}
+.ML {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  border-radius: 5px;
+  color: #66686b;
+  font-size: 16px;
+  font-weight: bolder;
+}
+.AL {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+  padding: 0px 10px;
+  border: 1px solid rgb(224, 233, 237);
+}
+.Ds_box {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  border-radius: 5px;
+  color: #66686b;
+  font-size: 16px;
+  font-weight: bolder;
+}
+.DS {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  border-radius: 10px;
+  padding: 0px 10px;
+  margin: 20px 0px;
+  border: 1px solid rgb(224, 233, 237);
+}
+.El_box {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  border-radius: 5px;
+  color: #66686b;
+  font-size: 16px;
+  font-weight: bolder;
+}
+.EL {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+  padding: 0px 10px;
+  border: 1px solid rgb(224, 233, 237);
+}
+.M_box {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  border-radius: 5px;
+  color: #66686b;
+  font-size: 16px;
+  font-weight: bolder;
+}
+.M {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+  padding: 0px 10px;
+  margin: 20px 0px;
+  border: 1px solid rgb(224, 233, 237);
+}
+.MN_box-1 {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  border-radius: 5px;
+  color: #66686b;
+  font-size: 16px;
+  font-weight: bolder;
+}
+.MN-1 {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+  padding: 0px 10px;
+  border: 1px solid rgb(224, 233, 237);
+}
+.arro {
+  rotate: -90deg;
+}
+.parentschild_3 > h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+.p-0 {
+  color: #6c68cc;
+  width: 400px;
+  height: 40px;
+  font-size: 24px;
+  font-weight: bolder;
+  margin: 30px 0px;
+  border: 2px solid rgb(207, 205, 205);
+  border-right: none;
+  border-top: none;
+  border-left: none;
+}
+.Guawahati {
+  width: 50px;
+  height: 50px;
+}
+.mandi {
+  width: 50px;
+  height: 50px;
+}
+.masai {
+  width: 70px;
+  height: 40px;
+}
+.logo {
+  display: flex;
+  gap: 30px;
+  margin: 40px 0px;
+}
+.p_1-2 {
+  font-size: 18px;
+  font-weight: bold;
+  color: rgb(119, 118, 118);
+}
+.p_2-2 {
+  font-size: 18px;
+  font-weight: bold;
+  color: rgb(67, 65, 65);
+}
+.p_2-2 {
+  padding: 9px 0px;
+}
+.p_2-2:hover {
+  color: #534fd3;
+}
+.p_3-2 {
+  width: 200px;
+  height: 40px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 20px;
+  padding: 10px;
+  border: 1px sd #f4dbd9;
+}
+.logo-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.logo-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin: 45px 0px;
+}
+.parentschild_2 > h2 {
+  width: 300px;
+  height: 50px;
+  padding: 10px 0px;
+  border: 2px solid rgb(205, 203, 203);
+  border-right: none;
+  border-top: none;
+  border-left: none;
+  color: #e81f3d;
+}
+.p_4-2 {
+  font-size: 18px;
+  font-weight: bold;
+  color: rgb(119, 118, 118);
+}
+.p_5-2 {
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(67, 65, 65);
+  padding: 9px 0px;
+}
+.p_5-2:hover {
+  color: #534fd3;
+}
+.p_6-2 {
+  width: 200px;
+  height: 40px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #e33e63;
+  background-color: #f4dbd9;
+  text-align: center;
+  border-radius: 20px;
+  padding: 9px 0px;
+  border: 1px splid #f4dbd9;
+}
+.logo_4 {
+  display: flex;
+  gap: 30px;
+  margin: 30px 0px;
+  justify-content: center;
+  align-items: center;
+}
+.parentschild_2 {
+  margin: 46px 0px;
 }
