--- a/Anime Website/CSS/SL.css
+++ b/Anime Website/CSS/SL.css
@@ -277,14 +277,25 @@ h4 {
   width: 91.5%;
 }
 
-.episode1 {
+.episode1,
+.zip1 {
   width: 93%;
-  padding: 20px 0;
+  border-bottom: 1px solid rgb(188, 186, 186);
+  padding-bottom: 17px;
+}
+
+.episode1 > p {
   text-align: center;
+  padding: 25px 0;
+  font-size: 18px;
+  font-weight: 700;
+  color: rgb(157, 2, 2);
+  text-decoration: underline;
 }
 
 .episode1_1,
-.episode1_2 {
+.episode1_2,
+.episode1_3 {
   width: inherit;
   display: flex;
   justify-content: space-between;
@@ -293,8 +304,29 @@ h4 {
   border: 1px solid;
 }
 
-.episode1_1 > p {
+.episode1_1 > p,
+.episode1_2 > p,
+.episode1_3 > p {
   text-transform: none;
+}
+
+.zip {
+  width: 93%;
+  opacity: 0.8;
+  padding: 25px 0;
+  font-size: x-large;
+  font-weight: bold;
+  text-align: center;
+}
+
+.add {
+  border-bottom: 1px solid rgb(188, 186, 186);
+  width: 93%;
+  font-size: xx-large;
+  font-weight: bold;
+  opacity: 0.8;
+  padding: 30px 0;
+  text-align: center;
 }
 
 .child4 {
@@ -469,4 +501,94 @@ hr {
 
 .search {
   display: none;
+}
+
+.open-popup-btn {
+  background: transparent;
+  position: relative;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px solid inherit;
+  overflow: hidden;
+  color: black;
+  transition: color 0.3s 0.1s ease-out;
+  text-align: center;
+  text-transform: uppercase;
+  height: 40px;
+}
+
+.open-popup-btn::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  content: "";
+  display: block;
+  width: 20em;
+  height: 5em;
+  left: -5em;
+  text-align: center;
+  transition: box-shadow 0.5s ease-out;
+  z-index: -1;
+}
+
+.open-popup-btn:hover::before {
+  box-shadow: inset 0 0 0 10em rgb(255, 0, 0);
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+.popup {
+  position: fixed;
+  left: 50%;
+  top: -150%;
+  transform: translate(-50%, -50%);
+  width: 75%;
+  height: auto;
+  background: #f5f5f5;
+  z-index: 7;
+}
+
+body.popup-active .popup {
+  top: 50%;
+}
+body.popup-active .popup-overlay {
+  display: block;
+}
+.popup .popup-close-btn {
+  position: absolute;
+  right: 3px;
+  top: 3px;
+  font-size: 20px;
+  background-color: #555;
+  padding: 4px 0;
+  color: #eee;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  font-weight: bold;
+  text-align: center;
+}
+
+.watch {
+  width: 160px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: blue;
+  color: #fff;
+  font-weight: bold;
+  margin: 15px 500px;
 }
